dist/1.0/bin/sample/retrieveUnpackaged/objects/Billing_Account_Contact__c.object
<CustomObject>
    <description>List of Contacts related to Billing Account</description>
    <fields>
        <fullName>Account__c</fullName>
        <description>Related Account</description>
        <inlineHelpText>Related Account</inlineHelpText>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>Billing_Account_Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Allows to deactivate Contact</description>
        <inlineHelpText>Allows to deactivate Contact</inlineHelpText>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Billing_Account__c</fullName>
        <description>Related Billing Account</description>
        <inlineHelpText>Related Billing Account</inlineHelpText>
        <label>Billing Account</label>
        <referenceTo>Billing_Accounts__c</referenceTo>
        <relationshipName>Billing_Account_Contacts</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Contact_Email__c</fullName>
        <description>Email of Related Contact</description>
        <formula>IF( ISBLANK( User__c ),  Contact__r.Email, User__r.Email)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Email of Related Contact</inlineHelpText>
        <label>Contact Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Name__c</fullName>
        <description>Name of Assigned Contact</description>
        <formula>IF( ISBLANK( User__c ),  HYPERLINK(&apos;/&apos; +  Contact__r.Id ,   Contact__r.FirstName + &apos; &apos; + Contact__r.LastName, &apos;_top&apos; ), HYPERLINK(&apos;/&apos; +  User__r.Id , User__r.FirstName + &apos; &apos; + User__r.LastName, &apos;_top&apos;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Name of Assigned Contact</inlineHelpText>
        <label>Contact Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <description>Selected Contact</description>
        <inlineHelpText>Selected Contact</inlineHelpText>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>Billing_Account_Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Created_in_Billing__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates if Information has already been sent to Billing (no delete after that)</description>
        <inlineHelpText>Indicates if Information has already been sent to Billing</inlineHelpText>
        <label>Created in Billing</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Role__c</fullName>
        <description>Role of the Contact</description>
        <inlineHelpText>Role of the Contact</inlineHelpText>
        <label>Role</label>
        <picklist>
            <picklistValues>
                <fullName>Payments</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sales</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Regional Director</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Source_Record_Id__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>Identifier used during data migration</description>
        <externalId>true</externalId>
        <inlineHelpText>Identifier used during data migration</inlineHelpText>
        <label>Source Record Id</label>
        <length>64</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <description>Selected User</description>
        <inlineHelpText>Selected User</inlineHelpText>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Billing_Account_Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Collection Billing Account Contact</label>
    <nameField>
        <displayFormat>BCO{000000000}</displayFormat>
        <label>Contact ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Collection Billing Account Contacts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>BillingAccount_Account</fullName>
        <active>true</active>
        <description>Selected Billing Account must depend on selected Account</description>
        <errorConditionFormula>Account__r.Id !=  Billing_Account__r.Account__r.Id</errorConditionFormula>
        <errorDisplayField>Billing_Account__c</errorDisplayField>
        <errorMessage>Selected Billing Account does not belong to this Account</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ContactOrUserRequired</fullName>
        <active>true</active>
        <description>Contact OR User is required</description>
        <errorConditionFormula>OR(
AND(
NOT(ISBLANK(Contact__c)),
NOT(ISBLANK(User__c))),
AND(
ISBLANK(Contact__c),
ISBLANK(User__c)))</errorConditionFormula>
        <errorMessage>Contact OR User must be selected</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Contact_Account</fullName>
        <active>true</active>
        <description>Verifies if selected Contact belongs to Account or Dealer</description>
        <errorConditionFormula>AND(
 Contact__r.AccountId !=  Account__r.Id ,
 Contact__r.Account.Dealer__c = false
)</errorConditionFormula>
        <errorDisplayField>Contact__c</errorDisplayField>
        <errorMessage>Selected contact must belong to selected Customer or Dealer Account</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Security_Sales_and_Manager</fullName>
        <active>true</active>
        <errorConditionFormula>AND(NOT(ISNEW()), OR(ISPICKVAL(Role__c, &apos;Sales&apos;), ISPICKVAL(Role__c, &apos;Regional Director&apos;)), $Profile.Name != &apos;Collection&apos;, $Profile.Name != &apos;Billing and Collection&apos;, $Profile.Name != &apos;Billing&apos;, $Profile.Name != &apos;System Administrator&apos;)</errorConditionFormula>
        <errorMessage>This Type of Contact can be modified only by Collection Department</errorMessage>
    </validationRules>
</CustomObject>